Addition of value prop section

--- a/css/style.css
+++ b/css/style.css
@@ -2626,7 +2626,8 @@ table.shopping-cart-table tr th, table.shopping-cart-table tr td {
 
 @media only screen and (max-width: 767px){
   .sm-content-cont {
-    height: 350px; /*300*/
+    display: block;
+    height: auto;
   }
   .sm-content-cont .light-72-wide, .sm-content-cont-fullscr .light-72-wide{
     font-size:25px;
